exports_files(
    [
        ".editorconfig",
        ".gitignore",
        ".prettierignore",
        ".prettierrc",
        "README.md",
        "angular.json",
        "jest.config.js",
        "nx.json",
        "package.json",
        "tsconfig.json",
        "tslint.json",
        "yarn-error.log",
        "yarn.lock",
        
    ],
    visibility = ["//:__subpackages__"],
)
